# blush-worker-prep

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: validate-flux2-klein-9b.yml
docs/: worker-contract.md
runtime/: requirements.txt
runtime/scripts/: apply_config.sh  install_nodes.py  pre-start.sh  sync-models.py
templates/capability/: .dockerignore  .env.local.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  config.yml  docker-compose.yml  worker.toml
templates/capability/.github/workflows/: ci.yml
worker_prep/: _apollo.py  _lib.py  _worker_meta.py  add_workflow.py  cli.py  export_apollo.py  export_template.py  hydrate_build.py  init_capability.py  paths.py  resolve_nodes.py  runpod_local.py  runpod_remote.py  sync_submodules.py  validate.py
